moving pics and editing text

--- a/13_Final_Project_Plans/index.html
+++ b/13_Final_Project_Plans/index.html
@@ -112,7 +112,7 @@ Here are the links to the models, as well as screenshots of them:
 
 # Creation of the Project: 
 
-*I had to significantly adjust the plan because some aspects of it were not feasible - for instance, I switched from using capacitative sensors to using buttons and I removed the seven segment display and octave changer button. 
+*I had to significantly adjust the plan because some aspects of it were not feasible - for instance, I removed the seven segment display and octave changer button. 
 
 ## Circuits:
 
