--- a/13_Final_Project_Plans/index.html
+++ b/13_Final_Project_Plans/index.html
@@ -102,7 +102,7 @@
 
 ##CAD Designs: 
 
-*Note that these are preliminary and will require tweaking throughout the process of construction 
+*Note that these are preliminary and will require tweaking throughout the process of construction -- they are now out of date, see the updated ones at the end of this page and the ones on the other [final project page](file:///Users/Abi/Documents/GitHub/PHYS-S-12/Final_Project/index.html). 
 
 Here are the links to the models, as well as screenshots of them: 
 
