--- a/13_Final_Project_Plans/index.html
+++ b/13_Final_Project_Plans/index.html
@@ -114,7 +114,7 @@ Here are the links to the models, as well as screenshots of them:
 
 *I had to significantly adjust the plan because some aspects of it were not feasible - for instance, I removed the seven segment display and octave changer button. 
 
-## Circuits:
+## Process of Construction:
 
   Here are images of the iterations of the piano thus far: 
 
