--- a/13_Final_Project_Plans/index.html
+++ b/13_Final_Project_Plans/index.html
@@ -137,7 +137,9 @@ Here are the links to the models, as well as screenshots of them:
 <source src="8212fd3c-ae5e-4082-a6e9-6dd927d3b124-0-e79af379-d0a5-48cb-8328-cc192ff02cfa.mp4" type="video/mp4">
 </video>
 
-The fifth iteration, created after all the code and wiring is finalized, will include sidings to enclose the breadboard. 
+5. I experimented with code interrupts, and followed various tutorials but sadly none of them succeded. Here are some images of the changes I made to the circuit, even though I had to undo them. 
+
+<img src="IMG_6353.jpeg" alt="circuit4pic" style="width:301.8px;height:401.5px;">
 
 ## Code: 
 
