--- a/13_Final_Project_Plans/index.html
+++ b/13_Final_Project_Plans/index.html
@@ -137,7 +137,7 @@ Here are the links to the models, as well as screenshots of them:
 <source src="8212fd3c-ae5e-4082-a6e9-6dd927d3b124-0-e79af379-d0a5-48cb-8328-cc192ff02cfa.mp4" type="video/mp4">
 </video>
 
-5. I experimented with code interrupts, and followed various tutorials but sadly none of them succeded. Here are some images of the changes I made to the circuit, even though I had to undo them. 
+5. I experimented with code interrupts, and followed various tutorials but sadly none of them succeded. Here is an image of the changes I made to the circuit, even though I had to undo them. 
 
 <img src="IMG_6353.jpeg" alt="circuit4pic" style="width:301.8px;height:401.5px;">
 
@@ -145,7 +145,7 @@ Here are the links to the models, as well as screenshots of them:
 
 Here is the most up to date code for the project as of July 27th. There are still various bugs in it that I am working on solving, such as getting it to stop playing the second of two notes played simultaneously once the button is released. 
 
-I'm also working on getting prgram interrupts to work so that the buzzer will respond faster to the buttons being pressed. 
+I'm also working on finding a more efficient way to identify the two buttons being pressed to reduce lag time from when the button is pressed to when the buzzer plays the noise.  
 <pre><code class="language-arduino">
 
 // Author: Abi Adam
