--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -28,6 +28,12 @@ It is also aesthetically pleasing and will look cool, doubling as a decorative p
 
 The MiniPiano is operated by eight keys, connected to the body of the piano. When pushed, each key triggers a button that sends a signal to the computer. Based on which button sent the signal, the computer tells the buzzer to play a specific note. By using a variety of different functions, the piano is capable of playing multiple notes at once and responding quickly to changes in the state of the buttons. The code is included in full below, and so are all the files used to manufacture the MiniPiano. There is also a CAD model of the body of the piano and circuit diagrams below. 
 
+## Images: 
+
+<img src="IMG_6336.JPG" alt="overhead piano" style="width:403.2px;height:301.5px;">
+<img src="IMG_6337.JPG" alt="side view piano" style="width:401.7px;height:301.6px;">
+<img src="IMG_6335.JPG" alt="front view" style="width:402.5px;height:300.8px;">
+
 ## Code: 
 
 *PUT FINAL VERSION HERE*
