--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -38,7 +38,9 @@ The MiniPiano is operated by eight keys, connected to the body of the piano. Whe
 
 *PUT FINAL VERSION HERE*
 
-## Circuit Diagram:
+## Circuit Diagram: 
+
+<img src="TinkedCAD.jpeg" alt="circuit diagram" style="width:1378px;height:1069px;">
 
 ## Files: 
 
