--- a/13_Final_Project_Plans/index.html
+++ b/13_Final_Project_Plans/index.html
@@ -141,6 +141,10 @@ Here are the links to the models, as well as screenshots of them:
 
 <img src="IMG_6353.jpeg" alt="circuit4pic" style="width:301.8px;height:401.5px;">
 
+6. I undid the interrupts, but was still suffering with a wide variety of bugs resulting from trying to play two notes at once. So, I decided to avoid all of these by seeing if using eight different buzzers (one for each note) would solve my issues. However, even after I modified the code and triple-checked the wiring, the buzzers would not cooperate. Three of the eight worked, but the other five didn't elicit any response from their corresponding buzzer. So after experimenting and trying to debug even more failed, I changed everything back to how it was before and resolved to debug that code. Here is an image of the wiring I made for this, even though it didn't work:
+
+<img src="IMG_6397.jpeg" alt="8buzzers" style="width:300.8px;height:403px;">
+
 ## Code: 
 
 Here is the most up to date code for the project as of July 27th. There are still various bugs in it that I am working on solving, such as getting it to stop playing the second of two notes played simultaneously once the button is released. 
