--- a/13_Final_Project_Plans/index.html
+++ b/13_Final_Project_Plans/index.html
@@ -311,17 +311,9 @@ pushed[7] = digitalRead(9);
 
 }//end of void loop
 
+Link to all the earlier iterations of the code: 
+
 </code></pre> 
-
-##Current Capabilities: 
-
-<video width="405" height="228.5" controls>
-<source src="55bdf20e-b623-4bf4-b7c0-edf2983dc988-0-e6f8a9f3-ee57-4c5d-a9f8-400a4189c924.mp4" type="video/mp4">
-</video>
-
-<video width="405" height="228.5" controls>
-<source src="9416a025-cc0f-4e7c-a9d3-f69baeb6c6c5-1-e6f8a9f3-ee57-4c5d-a9f8-400a4189c924.mp4" type="video/mp4">
-</video>
 
 ## Files and Relevant Tutorials:
 
