--- a/13_Final_Project_Plans/index.html
+++ b/13_Final_Project_Plans/index.html
@@ -147,6 +147,8 @@ Here are the links to the models, as well as screenshots of them:
 
 ## Code: 
 
+[home](./index copy.html) 
+
 <pre><code class="language-arduino">
 
 // Author: Abi Adam
@@ -310,8 +312,6 @@ pushed[7] = digitalRead(9);
 }// end of for 1
 
 }//end of void loop
-
-Link to all the earlier iterations of the code: 
 
 </code></pre> 
 
