--- a/13_Final_Project_Plans/index.html
+++ b/13_Final_Project_Plans/index.html
@@ -147,7 +147,7 @@ Here are the links to the models, as well as screenshots of them:
 
 ## Code: 
 
-[home](./indexcopy.html) 
+[Failed Iterations](./indexcopy.html) 
 
 <pre><code class="language-arduino">
 
