--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -16,6 +16,10 @@
 
 ## Demo Video: 
 
+<video width="1600" height="900" controls>
+<source src="49e7a7bd-274c-4c3c-bb70-4d53c263605d-0-de42b1a5-4ad7-4d5a-bc8b-35514b03b88f.mp4">
+</video>
+
 ## Purpose:
 
 I chose to make the MiniPiano because I believe that music should be more accessible and portable. Pianos and keyboards are so large and it is incredibly impracticle to move them around, and it can even be difficult to find somewhere to place them. The MiniPiano is small, portable, and fits easily wherever one wants to put it. It is perfect for practicing and just having fun with simple pieces of music. 
