--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -37,7 +37,7 @@ The MiniPiano is operated by eight keys, connected to the body of the piano. Whe
 <img src="IMG_6336.JPG" alt="overhead piano" style="width:403.2px;height:301.5px;">
 <img src="IMG_6337.JPG" alt="side view piano" style="width:401.7px;height:301.6px;">
 <img src="IMG_6335.JPG" alt="front view" style="width:402.5px;height:300.8px;">
-<img src="IMG_6430.JPG" alt="circuit view" style="width:402.5px;height:300.8px;">
+<img src="IMG_6430.jpeg" alt="circuit view" style="width:402.5px;height:300.8px;">
 
 ## Code: 
 
