--- a/13_Final_Project_Plans/index.html
+++ b/13_Final_Project_Plans/index.html
@@ -12,7 +12,7 @@
 
 
 
-  # Week 13: Final Project
+  # Week 13: Final Project Process
 
   [home](../index.html) 
 
@@ -150,7 +150,7 @@ Here are the links to the models, as well as screenshots of them:
 
 ## Code: 
 
-[Failed Iterations](./indexcopy.html) 
+Click [here](./indexcopy.html) to see the early versions of the final code used in this project.
 
 <pre><code class="language-arduino">
 
