--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -22,11 +22,7 @@
 
 ## Purpose:
 
-I chose to make the MiniPiano because I believe that music should be more accessible and portable. Pianos and keyboards are so large and it is incredibly impracticle to move them around, and it can even be difficult to find somewhere to place them. The MiniPiano is small, portable, and fits easily wherever one wants to put it. It is perfect for practicing and just having fun with simple pieces of music. 
-
-Above all, the MiniPiano was created to enable more people to explore music in a convenient way before diving in. 
-
-It is also aesthetically pleasing and will look cool, doubling as a decorative piece.
+I chose to make the MiniPiano because I love music and I wanted to create a more convenient way for people to get immersed and explore the feild. I'm also fascinated by the mechanics behind musical instruments and was excited to learn more about them through the process of building my own. The MiniPiano is small, portable, and fits easily wherever one wants to put it. It is perfect for practicing and just having fun with simple pieces of music.
 
 ## Mechanism:
 
