--- a/13_Final_Project_Plans/index.html
+++ b/13_Final_Project_Plans/index.html
@@ -137,10 +137,10 @@ Here are the links to the models, as well as screenshots of them:
 
   <img src="IMG_6353.jpeg" alt="circuit4pic" style="width:301.8px;height:401.5px;">
 
-Links to the tutorials: 
-https://create.arduino.cc/projecthub/Svizel_pritula/10-buttons-using-1-interrupt-2bd1f8
-https://www.youtube.com/watch?v=BnVyMB8orBs
-https://learn.sparkfun.com/tutorials/processor-interrupts-with-arduino/all
+  Links to the tutorials: </br></br>
+  https://create.arduino.cc/projecthub/Svizel_pritula/10-buttons-using-1-interrupt-2bd1f8 </br></br>
+  https://www.youtube.com/watch?v=BnVyMB8orBs</br></br>
+  https://learn.sparkfun.com/tutorials/processor-interrupts-with-arduino/all
 
   6. I undid the interrupts, but was still suffering with a wide variety of bugs resulting from trying to play two notes at once. So, I decided to avoid all of these by seeing if using eight different buzzers (one for each note) would solve my issues. However, even after I modified the code and triple-checked the wiring, the buzzers would not cooperate. Three of the eight worked, but the other five didn't elicit any response from their corresponding buzzer. So after experimenting and trying to debug even more failed, I changed everything back to how it was before and resolved to debug the original code. Here is an image of the wiring I made for this, even though it didn't work:
 
