--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -17,7 +17,7 @@
 ## Demo Video: 
 
 <video width="800" height="450" controls>
-<source src="3cb078ef-1742-474b-bee6-754f89c02325-0-c958e449-44c2-4f7b-924f-840e858fb6ac.mp4">
+<source src="DemoVideo.mp4">
 </video>
 
 ## Purpose:
