--- a/index.html
+++ b/index.html
@@ -15,49 +15,49 @@
 
   <div class="row">
     <div class="col-sm-4">
-       <img src="Hydrangea-PNG-Transparent-Picture.png" alt="hydrangea image" style="width:350px;height:300px;">
+       <img src="yellowflower1.jpg" alt="yellow flower" style="width:350px;height:350px;">
 
       [Week 1: Introduction and Documentation](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
-      <img src="WhiteTulip.jpg" alt="white tulip image" style="width:350px;height:300px;">
+      <img src="purpleflower1.jpg" alt="purple flower" style="width:350px;height:350px;">
 
       [Week 2: 2D Design and Cutting](./02_2D_Design_and_Cutting/index.html)
     </div>
     <div class="col-sm-4">
-      <img src="RedHydrangea.png" alt="red hydrangea image" style="width:350px;height:300px;">
+      <img src="pinkflower1.jpg" alt="pink flower image" style="width:350px;height:350px;">
       [Week 3: Electronics and Tools](./03_Electronics_and_Tools/index.html)
     </div>
   </div>
 
   <div class="row">
     <div class="col-sm-4">
-      <img src="YellowRose.jpg" alt="yellow rose image" style="width:350px;height:300px;"> 
+      <img src="blueflower1.jpg" alt="blue flower image" style="width:350px;height:350px;"> 
       [Week 4: Microcontroller Programming](./04_Microcontroller_Programming/index.html)
     </div>
     <div class="col-sm-4"> 
-       <img src="BlueFlowers.jpg" alt="blue flowers image" style="width:350px;height:300px;"> 
+       <img src="redflower1.JPG" alt="red flower image" style="width:350px;height:350px;"> 
       [Week 5: 3D Design & Printing](./05_3D_Design_and_Printing/index.html)
     </div>
     <div class="col-sm-4">
-      <img src="Red-WhiteFlower.jpg" alt="Pink-White flower image" style="width:350px;height:300px;"> 
+      <img src="yellowflower2.jpg" alt="yellow flower image" style="width:350px;height:350px;"> 
       [Week 6: Electronic Input Devices](./06_Electronic_Input_Devices/index.html)
     </div>
   </div>
 
    <div class="row">
     <div class="col-sm-4">
-      <img src="RedFlowers2X.jpg" alt="red flower image" style="width:350px;height:300px;"> 
+      <img src="yellowflower3.jpg" alt="yellow flower image" style="width:350px;height:350px;"> 
 
       [Week 7: Electronic Output Devices](./07_Electronic_Output_Devices/index.html)
     </div>
     <div class="col-sm-4">
-      <img src="LigtBalletPinkFlower.jpg" alt="ballet pink flower image" style="width:350px;height:300px;"> 
+      <img src="redflower3.jpg" alt="red flower image" style="width:350px;height:350px;"> 
 
       [Week 8: CNC Milling, Molding & Casting](./08_CNC_Milling,_Molding_&_Casting/index.html)
     </div>
     <div class="col-sm-4">
-      <img src="StripyPinkTulip.jpg" alt="striped pink tulip image" style="width:350px;height:300px;"> 
+      <img src="blueflower2.jpg" alt="blue flower image" style="width:350px;height:350px;"> 
 
       [Week 9: Radio, WiFi, Bluetooth (IoT)](./09_Radio,_Wifi,_Bluetooth_IoT/index.html)
     </div>
@@ -65,15 +65,15 @@
 
   <div class="row">
     <div class="col-sm-4">
-      <img src="BrownFlower.jpg" alt="brown flower image" style="width:350px;height:300px;">  
+      <img src="redflower2.jpg" alt="red flower image" style="width:350px;height:350px;">  
       [Week 10: Machine Building and End Effectors](./10_Machine_Building_and_End_Effectors/index.html)
     </div>
     <div class="col-sm-4">
-      <img src="WhiteRose.png" alt="white rose image" style="width:350px;height:300px;">  
+      <img src="purpleflower2.jpg" alt="purple flower image" style="width:350px;height:350px;">  
       [Week 11: Wildcard, Machines](./11_Wildcard,_Macines/index.html)
     </div>
     <div class="col-sm-4"> 
-       <img src="WhitePurpleStripedTulip.jpg" alt="purple striped tulip image" style="width:350px;height:300px;">
+       <img src="pinkflower2.jpg" alt="pink flower image" style="width:350px;height:350px;">
       [Week 12: Project Prep (lab)](./12_Project_Prep_lab/index.html)
     </div>
   </div>
