--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
 
    <div class="row">
     <div class="col-sm-4">
-       <img src="YellowSunflower.jpg" alt="yellow sunflower image" style="width:350px;height:300px;">
+       <img src="IMG_3332.jpg" alt="blue flower (1) image" style="width:350px;height:350px;">
       [Week 13: Final Project Plans and Creation](./13_Final_Project_Plans/index.html)
     </div>
      <div class="col-sm-4">
-      <img src="Hydrangea-PNG-Transparent-Picture.png" alt="hydrangea image" style="width:350px;height:300px;">
+      <img src="IMG_3331.jpg" alt="blue flower (2) image" style="width:350px;height:350px;">
       [Final Project](./Final_Project/index.html)
     </div>
     <div class="col-sm-4">
-     <img src="OrangeFlower1.jpg" alt="orange flower image" style="width:350px;height:300px;">
+     <img src="IMG_3330.jpg" alt="red flower image" style="width:350px;height:350px;">
       [About Me](./About_Me/index.html)
     </div>
      </div>
