--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 
   <div class="row">
     <div class="col-sm-4">
-       <img src="yellowflower1.jpg" alt="yellow flower" style="width:350px;height:350px;">
+       <img src="IMG_3339-1.jpeg" alt="turquoise flower" style="width:350px;height:350px;">
 
       [Week 1: Introduction and Documentation](./01_intro/index.html)
     </div>
     <div class="col-sm-4">
-      <img src="purpleflower1.jpg" alt="purple flower" style="width:350px;height:350px;">
+      <img src="IMG_3338.jpeg" alt="purple flower" style="width:350px;height:350px;">
 
       [Week 2: 2D Design and Cutting](./02_2D_Design_and_Cutting/index.html)
     </div>
