--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
    <div class="row">
     <div class="col-sm-4">
-      <img src="yellowflower3.jpg" alt="yellow flower image" style="width:350px;height:350px;"> 
+      <img src="IMG_3340-1.jpeg" alt="blue flower image" style="width:350px;height:350px;"> 
 
       [Week 7: Electronic Output Devices](./07_Electronic_Output_Devices/index.html)
     </div>
@@ -57,7 +57,7 @@
       [Week 8: CNC Milling, Molding & Casting](./08_CNC_Milling,_Molding_&_Casting/index.html)
     </div>
     <div class="col-sm-4">
-      <img src="blueflower2.jpg" alt="blue flower image" style="width:350px;height:350px;"> 
+      <img src="IMG_3334.jpeg" alt="yellow flower image" style="width:350px;height:350px;"> 
 
       [Week 9: Radio, WiFi, Bluetooth (IoT)](./09_Radio,_Wifi,_Bluetooth_IoT/index.html)
     </div>
