--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
    <div class="row">
     <div class="col-sm-4">
-       <img src="IMG_3332.jpg" alt="blue flower (1) image" style="width:350px;height:350px;">
+       <img src="blueflower2.jpg" alt="blue flower (1) image" style="width:350px;height:350px;">
       [Week 13: Final Project Plans and Creation](./13_Final_Project_Plans/index.html)
     </div>
      <div class="col-sm-4">
