--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
       [Week 7: Electronic Output Devices](./07_Electronic_Output_Devices/index.html)
     </div>
     <div class="col-sm-4">
-      <img src="redflower3.jpg" alt="red flower image" style="width:350px;height:350px;"> 
+      <img src="IMG_3343.jpeg" alt="blue flower image" style="width:350px;height:350px;"> 
 
       [Week 8: CNC Milling, Molding & Casting](./08_CNC_Milling,_Molding_&_Casting/index.html)
     </div>
@@ -73,7 +73,7 @@
       [Week 11: Wildcard, Machines](./11_Wildcard,_Macines/index.html)
     </div>
     <div class="col-sm-4"> 
-       <img src="pinkflower2.jpg" alt="pink flower image" style="width:350px;height:350px;">
+       <img src="IMG_3342.jpeg" alt="purple flower image" style="width:350px;height:350px;">
       [Week 12: Project Prep (lab)](./12_Project_Prep_lab/index.html)
     </div>
   </div>
