--- a/Final_Project/index.html
+++ b/Final_Project/index.html
@@ -216,7 +216,7 @@ Laser Cutting File: </br>
 </br>
  [DXF Addition File (to correct mistakes in the first cut)](https://a360.co/3oyetF5).
  </br>
- CAD MODEL OF CASING HERE
+ [CAD Model of Base](https://a360.co/3zfPr2y)
 
 
 ## Tutorials/Resources:
