--- a/05_3D_Design_and_Printing/index.html
+++ b/05_3D_Design_and_Printing/index.html
@@ -20,7 +20,7 @@ Outline:
 <br><br>
 <a href="#B">Photogrammetry</a> 
 <br><br>
-[Link to updated final project proposal](../13_Final_Project_Plans/index.html).
+[Link to updated final project proposal](https://abiadam.github.io/PHYS-S-12/13_Final_Project_Plans/index.html).
 
 
 <a id="A">
