--- a/01_intro/index.html
+++ b/01_intro/index.html
@@ -16,7 +16,7 @@
 
   I created the [About Me](../About_Me/index.html) page, complete with a succinct description and picture of me.
 
-  I also wrote a VERY preliminary proposal for a final project, which can be viewed on the [final project page of the website](../13_Final_Project_Plans/index.html). 
+  I also wrote a VERY preliminary proposal for a final project, which can be viewed on the [final project page of the website](https://abiadam.github.io/PHYS-S-12/13_Final_Project_Plans/index.html). 
 
   Click [here](../index.html) if you want to return to the main page. 
 
